# pose-from-video

./: Cargo.toml  README.md
godot/apriltagvisualiser/: .gitignore  coordinate_frame.gd  coordinate_frame.tscn  coordinate_frame_manager.gd  icon.svg.import  node_3d.tscn  pose_supplier.gd  project.godot  restart.gd
src/: calibration.rs  lib.rs  pose.rs
