[package]
name = "apriltag-video-tracker"
version = "0.1.0"
edition = "2024"

[dependencies]
apriltag = "0.4.0"
clap = { version = "4.5.32", features = ["derive"] }
ffmpeg-next = "7.1.0"
opencv = { version = "0.94.2", features = ["clang-runtime"] }
rayon = "1.10.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
toml = "0.8.20"
